common-apps/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: frapee
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argo.kube.themallams.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-demo-server
            port:
              number: 443
