common-apps/mariadb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb-ingress
  namespace: frapee
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: mariadb.kube.themallams.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mariadb
            port:
              number: 3306
